# wmts_pi

./: CMakeLists.txt  README.md
data/: icon.xcf
po/: POTFILES.in  WMTS_pi.pot  ca.po  cs.po  da.po  de.po  el.po  es.po  et.po  fi.po  fr.po  gl.po  hu.po  it.po  ja.po  nb.po  nl.po  pl.po  pt.po  ru.po  sv.po  tr.po  vi.po  zh.po
scripts/: wmts.py
src/: icons.cpp  icons.h  wmts_pi.cpp  wmts_pi.h
